# epcon-frontend

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
hide_links_plugin/: __init__.py  core.py
hide_links_plugin/static/css/: hide-links.css
hide_links_plugin/static/js/: hide-links.js
hide_links_plugin/templates/: base.html
hide_links_plugin/templates/web/: index.html
